--- a/style.css
+++ b/style.css
@@ -69,19 +69,32 @@
     /* Fim Fonts */
 
     /* Spacing */
-        --spacing0: 0px;
-        --spacing025: 2px;
-        --spacing050: 4px;
-        --spacing075: 6px;
-        --spacing100: 8px;
-        --spacing150: 12px;
-        --spacing175: 16px;
-        --spacing200: 20px;
-        --spacing250: 24px;
-        --spacing300: 28px;
-        --spacing400: 32px;
-        --spacing500: 40px;
-        --spacing600: 48px;
-        --spacing800: 64px;
-        --spacing1000: 80px;
+        --spacing-0: 0px;
+        --spacing-025: 2px;
+        --spacing-050: 4px;
+        --spacing-075: 6px;
+        --spacing-100: 8px;
+        --spacing-150: 12px;
+        --spacing-175: 16px;
+        --spacing-200: 20px;
+        --spacing-250: 24px;
+        --spacing-300: 28px;
+        --spacing-400: 32px;
+        --spacing-500: 40px;
+        --spacing-600: 48px;
+        --spacing-800: 64px;
+        --spacing-1000: 80px;
+    /* Fim Spacing */
+
+    /* Border Radius */
+        --radius-0: 0px;
+        --radius-4: 4px;
+        --radius-6: 6px;
+        --radius-8: 8px;
+        --radius-10: 10px;
+        --radius-12: 12px;
+        --radius-16: 16px;
+        --radius-20: 20px;
+        --radius-24: 24px;
+        --radius-full: 999px;
 }
