feat(style.css: Header): adicionar padding ao header e aumentar o tamanho da logo Tech book club

--- a/style.css
+++ b/style.css
@@ -98,3 +98,14 @@
         --radius-24: 24px;
         --radius-full: 999px;
 }
+
+
+/* Header */
+header{
+    padding: var(--spacing-200);
+    z-index: 1000;
+    
+    img{
+        width: 100%;
+    }
+}
