feat(style.css: Header): adicionar position sticky para o header ficar grudado ao topo do site

--- a/style.css
+++ b/style.css
@@ -104,6 +104,8 @@
 header{
     padding: var(--spacing-200);
     z-index: 1000;
+    position: sticky;
+    top: 0px;
     
     img{
         width: 100%;
