feat(style.css: hero): adicionar gradiente de fundo ao titulo principal da página

--- a/style.css
+++ b/style.css
@@ -112,9 +112,20 @@ header{
     padding: var(--spacing-200);
     background-image: url(assets/images/pattern-light-bg.svg);
     background-color: var(--neutral_100);
+
+
+    h1{
+        font: var(--text-preset1-mobile);
+        background: var(--text-gradient);
+        background-clip: text;
+        color: transparent;
+    }
+
     .image{
         width: 100%;
     }
+
+
 }
 
 .read-together{
