--- a/style.css
+++ b/style.css
@@ -256,3 +256,60 @@ header{
         margin: var(--spacing-500) 0px var(--spacing-800) 0px;
     }
 }
+
+
+/* Sessão de Reading-Journey */
+.reading-journey{
+    padding: var(--spacing-800) var(--spacing-200);
+    background-image: url(assets/images/pattern-light-bg.svg);
+    background-color: var(--neutral_100);
+    margin: 0px var(--spacing-200) var(--spacing-800) var(--spacing-200);
+    border-radius: var(--radius-12);
+    overflow: hidden;
+    position: relative;
+
+    h2{
+        font: var(--text-preset2-mobile);
+    }
+
+    img{  
+        position: absolute;
+        bottom: -180px;
+        right: -190px;
+        width: 120%;
+        opacity: 0.8;
+    }
+
+    .step-container{
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-400);
+        
+        &:nth-child(2){
+            margin: var(--spacing-400) 0px 0px 0px;
+        }
+
+        .step{
+            display: flex;
+            flex-direction: column;
+            gap: var(--spacing-200);
+
+            .step_number_container{
+                font: var(--text-preset6-mobile);
+                color: var(--neutral_900);
+                border: var(--spacing-025) solid var(--neutral_900);
+                width: 32px;
+                height: 32px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: var(--spacing-050);
+            }
+
+            p{
+                font: var(--text-preset6-mobile);
+                color: var(--neutral_900);
+            }
+        }
+    }
+}
