feat(css): ajustar margem entre os itens da feature da sessão de Membership Options

--- a/style.css
+++ b/style.css
@@ -375,10 +375,14 @@ header{
     }
   }
 
-  /* Acha esse nível para clareza */
+  
   .features-item {
     font: var(--text-preset5);
     display: flex;
     gap: var(--spacing-150);
+
+    &:nth-child(2){
+        margin: var(--spacing-175) 0 0 0;
+    }
   }
 }
